[Mac] Fixed permission bubble position in fullscreen

BUG=670254

Review-Url: https://codereview.chromium.org/2549863002
Cr-Commit-Position: refs/heads/master@{#436062}

Former-commit-id: 72a9bc5acf1c8a203d108a58b69a8f2f8ae17aaf